tests/spec/fail/assert_ok_fail.aja
import (
    "modules/assert"
)

assert.ok(false, "boom")
